--- a/Frontend/src/admin.html
+++ b/Frontend/src/admin.html
@@ -16,6 +16,11 @@
       </section>
     </header>
 
+    <section id="welcome">
+      <h1>Welcome admin</h1>
+      <img src="/Frontend/assets/img/admin.png">
+    </section>
+
     <main>
       <section id="features">
         <article>
@@ -27,7 +32,7 @@
           <img src="/Frontend/assets/img/report.png" class="feature_img">
         </article>
         <article>
-          <p>Manege users</p>
+          <p>Manage users</p>
           <img src="/Frontend/assets/img/users.png" class="feature_img">
         </article>
       </section>
@@ -51,8 +56,8 @@
           <li>Vision</li>
         </ul>
       </section>
-      <section>
-        <h3>Follow us</h3>
+      <section id="follow_us">
+        <h3 >Follow us</h3>
         <br>
         <a href="https://www.facebook.com/"><img src="/Frontend/assets/img/facebook.png" alt="Facebook" class="social_media"></a>
         <a href="https://www.instagram.com/"><img src="/Frontend/assets/img/instagram.png" alt="Instagram" class="social_media"></a>
