--- a/Frontend/src/student.html
+++ b/Frontend/src/student.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
-    <link rel="stylesheet" href="/Frontend/src/admin.css"/>
+    <title>student</title>
+    <link rel="stylesheet" href="/Frontend/src/styles.css"/>
   </head>
 
   <body>
@@ -17,27 +17,35 @@
     </header>
 
     <section id="welcome">
-      <h1>Welcome admin</h1>
-      <img src="/Frontend/assets/img/admin.png">
+      <h1>Welcome student</h1>
+      <img src="/Frontend/assets/img/student.png" id="welcome_img">
     </section>
 
     <main>
       <section id="features">
         <article>
-          <p>Manage subjects</p>
-          <img src="/Frontend/assets/img/subjects.png" class="feature_img">
+          <p>Course</p>
+          <img src="/Frontend/assets/img/course.png" class="feature_img">
         </article>
         <article>
-          <p>Reports</p>
-          <img src="/Frontend/assets/img/report.png" class="feature_img">
+          <p>Qualifications</p>
+          <img src="/Frontend/assets/img/qualification.png" class="feature_img">
         </article>
         <article>
-          <p>Manage users</p>
-          <img src="/Frontend/assets/img/users.png" class="feature_img">
+          <p>Attendance record</p>
+          <img src="/Frontend/assets/img/attendance.png" class="feature_img">
+        </article>
+        <article>
+          <p>Download schedule</p>
+          <img src="/Frontend/assets/img/schedule.png" class="feature_img">
+        </article>
+        <article>
+          <p>Enrollment</p>
+          <img src="/Frontend/assets/img/enrollment.png"class="feature_img">
         </article>
       </section>
-      <section id="main_image">
-       <img src="/Frontend/assets/img/admin2.png" alt="admin" id="admin2">
+      <section id="main_2">
+       <img src="/Frontend/assets/img/calendar.png" id="main_2_img">
       </section>
     </main>
 
@@ -64,6 +72,6 @@
         <a href="https://www.twitter.com/"><img src="/Frontend/assets/img/x.png" alt="Twitter" class="social_media"></a>
       </section>
     </footer>
-    <script src="Frontend/src/admin.js"></script>
+    <script src="Frontend/src/app.js"></script>
   </body>
 </html>
