--- a/Frontend/src/pages/home.html
+++ b/Frontend/src/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>student</title>
+    <title>Home</title>
     <link rel="stylesheet" href="/Frontend/src/styles.css"/>
   </head>
 
@@ -11,43 +11,44 @@
     <header>
       <img src="/Frontend/assets/img/Logo.png" id="logo">
       <section id="right_header">
-        <button class="button_profile">Admin</button>
+        <button class="button_profile">Sign in</button>
         <img src="/Frontend/assets/img/icon_person.png" id="icon_person">
       </section>
     </header>
+    <nav>
+        <a href="/Frontend/src/pages/home.html">Home</a>
+        <a href="#about_us">Contact</a>
+        <a href="">Comunity</a>
+        <a href="">Resources</a>
+    </nav>
 
     <section id="welcome">
-      <h1>Welcome student</h1>
-      <img src="/Frontend/assets/img/student.png" id="welcome_img">
+      <h1>World University</h1>
     </section>
 
     <main>
-      <section id="features">
-        <article>
-          <p>Course</p>
-          <img src="/Frontend/assets/img/course.png" class="feature_img">
-        </article>
-        <article>
-          <p>Qualifications</p>
-          <img src="/Frontend/assets/img/qualification.png" class="feature_img">
-        </article>
-        <article>
-          <p>Attendance record</p>
-          <img src="/Frontend/assets/img/attendance.png" class="feature_img">
-        </article>
-        <article>
-          <p>Download schedule</p>
-          <img src="/Frontend/assets/img/schedule.png" class="feature_img">
-        </article>
-        <article>
-          <p>Enrollment</p>
-          <img src="/Frontend/assets/img/enrollment.png"class="feature_img">
-        </article>
-      </section>
-      <section id="main_2">
-       <img src="/Frontend/assets/img/calendar.png" id="main_2_img">
+      <section>
+        <img src="/Frontend/assets/img/home_img.png" id="home_img">
       </section>
     </main>
+
+    <section id="section2">
+        <article>
+            <h2>About us</h2>
+            <br>
+            <p>Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields</p>
+        </article>
+        <article>
+            <h2>Mission</h2>
+            <br>
+            <p>To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment</p>
+        </article>
+        <article>
+            <h2>Vision</h2>
+            <br>
+            <p>To be a leading institution known for excellence in education and a positive impact on society</p>
+        </article>
+    </section>
 
     <footer>
       <section>
