--- a/Frontend/src/pages/admin.html
+++ b/Frontend/src/pages/admin.html
@@ -9,36 +9,36 @@
 
   <body>
     <header>
-      <img src="/Frontend/assets/img/Logo.png" id="logo">
+      <img src="/Frontend/assets/img/Logo.png" id="logo" alt="">
       <section id="right_header">
         <button class="button_profile">Admin</button>
-        <img src="/Frontend/assets/img/icon_person.png" id="icon_person">
+        <img src="/Frontend/assets/img/icon_person.png" id="icon_person" alt="">
       </section>
     </header>
 
     <section id="welcome">
       <h1>Welcome admin</h1>
-      <img src="/Frontend/assets/img/admin.png" id="welcome_img">
+      <img src="/Frontend/assets/img/admin.png" id="welcome_img" alt="">
     </section>
 
     <main>
       <section id="features">
         <article>
           <p>Course</p>
-          <img src="/Frontend/assets/img/course.png" class="feature_img">
+          <img src="/Frontend/assets/img/course.png" class="feature_img" alt="">
         </article>
         <article>
           <p>Qualifications</p>
-          <img src="/Frontend/assets/img/qualification.png" class="feature_img">
+          <img src="/Frontend/assets/img/qualification.png" class="feature_img" alt="">
         </article>
         <article>
           <p>Attendance record</p>
-          <img src="/Frontend/assets/img/attendance.png" class="feature_img">
+          <img src="/Frontend/assets/img/attendance.png" class="feature_img" alt="">
         </article>
 
       </section>
       <section id="main_2">
-       <img src="/Frontend/assets/img/admin2.png" id="admin2">
+       <img src="/Frontend/assets/img/admin2.png" id="admin2" alt="">
       </section>
     </main>
 
