--- a/Frontend/src/pages/home.html
+++ b/Frontend/src/pages/home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/Frontend/src/styles.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
   </head>
 
   <body>
     <header>
-      <img src="/Frontend/assets/img/Logo.png" id="logo">
+      <img src="/Frontend/assets/img/Logo.png" id="logo" alt="">
       <section id="right_header">
         <button class="button_profile">Sign in</button>
-        <img src="/Frontend/assets/img/icon_person.png" id="icon_person">
+        <img src="/Frontend/assets/img/icon_person.png" id="icon_person" alt="">
       </section>
     </header>
     <nav>
@@ -28,7 +28,7 @@
 
     <main>
       <section>
-        <img src="/Frontend/assets/img/home_img.png" id="home_img">
+        <img src="/Frontend/assets/img/home_img.png" id="home_img" alt="">
       </section>
     </main>
 
@@ -73,6 +73,5 @@
         <a href="https://www.twitter.com/"><img src="/Frontend/assets/img/x.png" alt="Twitter" class="social_media"></a>
       </section>
     </footer>
-    <script src="Frontend/src/app.js"></script>
   </body>
 </html>
