--- a/Frontend/src/pages/student.html
+++ b/Frontend/src/pages/student.html
@@ -9,43 +9,43 @@
 
   <body>
     <header>
-      <img src="/Frontend/assets/img/Logo.png" id="logo">
+      <img src="/Frontend/assets/img/Logo.png" id="logo" alt="">
       <section id="right_header">
         <button class="button_profile">Student</button>
-        <img src="/Frontend/assets/img/icon_person.png" id="icon_person">
+        <img src="/Frontend/assets/img/icon_person.png" id="icon_person" alt="">
       </section>
     </header>
 
     <section id="welcome">
       <h1>Welcome student</h1>
-      <img src="/Frontend/assets/img/student.png" id="welcome_img">
+      <img src="/Frontend/assets/img/student.png" id="welcome_img" alt="">
     </section>
 
     <main>
       <section id="features">
         <article>
           <p>Course</p>
-          <img src="/Frontend/assets/img/course.png" class="feature_img">
+          <img src="/Frontend/assets/img/course.png" class="feature_img" alt="">
         </article>
         <article>
           <p>Qualifications</p>
-          <img src="/Frontend/assets/img/qualification.png" class="feature_img">
+          <img src="/Frontend/assets/img/qualification.png" class="feature_img"  alt="">
         </article>
         <article>
           <p>Attendance record</p>
-          <img src="/Frontend/assets/img/attendance.png" class="feature_img">
+          <img src="/Frontend/assets/img/attendance.png" class="feature_img"  alt="">
         </article>
         <article>
           <p>Download schedule</p>
-          <img src="/Frontend/assets/img/schedule.png" class="feature_img">
+          <img src="/Frontend/assets/img/schedule.png" class="feature_img"  alt="">
         </article>
         <article>
           <p>Enrollment</p>
-          <img src="/Frontend/assets/img/enrollment.png"class="feature_img">
+          <img src="/Frontend/assets/img/enrollment.png"class="feature_img"  alt="">
         </article>
       </section>
       <section id="main_2">
-       <img src="/Frontend/assets/img/calendar.png" id="main_2_img">
+       <img src="/Frontend/assets/img/calendar.png" id="main_2_img" alt="">
       </section>
     </main>
 
