--- a/Frontend/src/pages/staff.html
+++ b/Frontend/src/pages/staff.html
@@ -4,46 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../assets/img/Logo.png">
-    <link rel="stylesheet" href="../../assets/styles/teacher.css">
+    <link rel="stylesheet" href="../../assets/styles/staff.css">
     <link rel="stylesheet" href="../../assets/styles/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Teacher Home</title>
+    <title>Staff Home</title>
 </head>
 <body class="grid-container">
     <header class="header">
         <img src="../../assets/img/Logo.png" alt="" class="logo">
         <div class="flex-container">
-            <button class="button">Teacher</button>
+            <button class="button">Staff</button>
             <img src="../../assets/img/icon_person.png" alt="" class="icon_person">
         </div>
     </header>
     <aside class="aside">
-        <p>Welcome Teacher</p>
-        <img src="../../assets/img/teachers.png" alt="" class="img-aside">
+        <p>Welcome Staff</p>
+        <img src="../../assets/img/director.png" alt="" class="img-aside">
     </aside>
     <main class="main">
-        <div class="grid-container1">
-            <div class="grid-item1 card card-family effect">
-                <p>View Schedule</p>
-                <img src="../../assets/img/clock.png" alt="" class="item">
+        <div class="flex-container1">
+            <div class="flex-container2">
+                <div class="flex-container3">
+                    <p class="title title1 effect">Reports</p>
+                    <img src="../../assets/img/report.png" alt="" class="img1">
+                </div>
+                <div class="flex-container3">
+                    <p class="title title2 effect">Manage Teachers</p>
+                    <img src="../../assets/img/teacher.png" alt="" class="img2">
+                </div>
             </div>
-            <div class="grid-item2 card card-family effect">
-                <p>Record Qualifications</p>
-                <img src="../../assets/img/qualification.png" alt="" class="item">
-            </div>
-            <div class="grid-item3 card card-family effect">
-                <p>Manage Course</p>
-                <img src="../../assets/img/course.png" alt="" class="item">
-            </div>
-            <div class="grid-item4 card card-family effect">
-                <p>Attendance Registration</p>
-                <img src="../../assets/img/attendance.png" alt="" class="item">
-            </div>
-            <div class="grid-item5 card1 card-family effect">
-                <p>Calendar</p>
-                <img src="../../assets/img/calendar1.png" alt="" class="item">
-            </div>
-            <img src="../../assets/img/books.png" alt=""  class="grid-item6">
+            <img src="../../assets/img/people.png" alt="" class="people">
         </div>
     </main>
     <footer class="footer">
