--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
   <script src="js/main.js"></script>
+  <script src="js/staff.js"></script>
+
   <app-root></app-root>
 </body>
 </html>
